<resources>
    <string name="app_name">Safepe</string>
    <string name="google_maps_api_key">AIzaSyAJY3QY_Ag6zwVANYKA5Di2FHFMWSXLgq4</string>
    <string name="notification_error_ssl_cert_invalid">Are you sure to continue</string>
    <string name="notification_betting"> Proceed for betting</string>
    <string name="update_alert"> Do you want to update X-Wallet</string>
    <string name="message_redeem">Your Redeem request has been accepted, please wait 24 to 48 hours working day to transaction Confirmation. </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile">Profile</string>
    <string name="pick_image_intent_text">pick image_intent_text</string>
    <string name="change_password">Change Password</string>
    <string name="spinner_type">Account Type</string>
    <string name="recharge_coupne">Or Recharge via Coupon</string>
    <string name="addmoney_through_call">If you want Add money to your Wallet Please contact on </string>
    <string name="invite_and_earn">Share the X-Wallet to your friends get free upto Rs.10 !</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="pincode">Pincode</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="update">Update</string>
    <string name="home">Home</string>
    <string name="my_account">My Profile</string>
    <string name="upgrade_package">Membership</string>
    <string name="wallet_bonus">Upgrade membership</string>
    <string name="to_wallet">My Wallet</string>
    <string name="security">Shopping</string>
    <string name="my_booking">My orders</string>
    <string name="my_order">Genealogy</string>
    <string name="history">History</string>
    <string name="update_kyc">Update KYC</string>
    <string name="logout">Logout</string>
    <string name="callus">Call us : +91-4226661999</string>
    <string name="version">Version 1.1.0.104</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">SAFEPE</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="pass_changed_msg">Password changed!</string>
    <string name="pass_enter_msg">Enter your passcode:</string>
    <string name="pass_enter_again_msg">"Enter your passcode again: "</string>
    <string name="pass_false_msg">"Sorry, try again."</string>
    <string name="pass_delete_msg">"Password deleted!"</string>
    <string name="pins1fre_msg">Powered by PinS1fre | KeyLo99 </string>
    <string name="bankdetails">To buy package through bank transfer. You have to make a fund transfer to the account mentioned below.</string>
    <string name="payment">Once done. Click on proceed to fill the payment details.</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="address_safepe">HIXSON TECHNOLOGIES B395,VictoriaLayourt,Palamgrove,Road Tilal Offices, Block 6 4thfloor,Muscat P.O Bangaluru.Karnataka560047</string>

</resources>
